<resources>
    <string name="app_name">GreenCity</string>
    <string name="my_app_id">greencity-pfvds</string>
    <string name="edit_email">Email</string>
    <string name="accedi">Accedi</string>
    <string name="clicca_qui">Registrati</string>
    <string name="edit_password">Password</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="name_green">Green</string>
    <string name="name_city">City</string>
    <string name="edit_cognome">Cognome</string>
    <string name="edit_nome">Nome</string>
    <string name="green_city">Green City</string>
    <string name="registrati">Registrati</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="country_prompt">Seleziona la Regione</string>
    <string name="aggiungi_reports">Aggiungi Reports</string>
    <string name="cancella">CANCELLA</string>
    <string name="conferma">CONFERMA</string>
    <string name="marker_image">marker image</string>
    <string name="descrizione_marker">DESCRIZIONE</string>
    <string name="inserisci_descrizione">Inserisci la descrizione del problema</string>
    <string name="inserisci_titolo_marker">Inserisci il problema del marker</string>
    <string name="titolo_marker">TITOLO</string>
    <string name="tipologia_marker">TIPOLOGIA MARKER</string>
    <string name="gps_message">Il tuo GPS sembra essere disabilitato, vuoi abilitarlo?</string>
    <string name="positive_message">Si</string>
    <string name="negative_message">No</string>
    <string name="title_char_report">GRAFICI REPORT</string>
    <string name="open_card">Apri</string>
    <string name="remember">Ricordami</string>
    <string name="logout">logout</string>
    <string name="benvenuto_n">Benvenuto</string>
    <string name="totale_report">TOTALE REPORT</string>
    <string name="confermate">CONFERMATE</string>
    <string name="rifiutate">RIFIUTATE</string>
    <string name="reject">RIFIUTATE</string>
    <string name="waiting">IN ATTESA</string>
    <string name="i_miei_report">I MIEI REPORT</string>
    <string name="placeholder_title">Placeholder Title</string>
    <string name="placeholder_date">Placeholder date</string>
    <string name="inbox">inbox</string>
    <string name="title_activity_pie_">Pie_Activity</string>
    <string name="segnalazioni">REPORTS</string>
    <string name="title_activity_back_home">BackHome</string>
</resources>
