<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color" android:id="@+id/wrapper_signin">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/name_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp">

        <TextView
                android:id="@+id/green_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_green"
                android:textSize="@android:dimen/app_icon_size"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1.0" android:fontFamily="sans-serif-black"
                android:textColor="@android:color/white"/>

        <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/name_city"
                android:fontFamily="sans-serif-black"
                android:textSize="@android:dimen/app_icon_size"
                app:layout_constraintStart_toEndOf="@+id/green_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/name_city_signin"/>

    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/form_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_logo"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="72dp">

        <EditText
                android:id="@+id/signin_nome"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:inputType="textPersonName"
                android:hint="@string/edit_nome"
                android:ems="10" android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"/>

        <EditText
                android:id="@+id/signin_cognome"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:inputType="textPersonName"
                android:hint="@string/edit_cognome"
                android:textSize="18sp"
                android:ems="10"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/signin_nome"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintBottom_toBottomOf="parent"/>

        <EditText
                android:id="@+id/email_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_email_black"
                android:drawableTint="@android:color/white"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:drawablePadding="10dp"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signin_nome"
        />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>