<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".activity.MainActivity"
        android:id="@+id/wrapper_login">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/background_login"
            android:fitsSystemWindows="true"
            android:scaleType="fitStart"
            android:background="@drawable/background_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintDimensionRatio="1:1">

        <ImageView
                android:id="@+id/logo_green_city"
                android:layout_width="248dp"
                android:layout_height="213dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/green_city"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_green_city"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:id="@+id/form_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0">

        <EditText
                android:id="@+id/email_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:layout_marginTop="24dp"
                android:textSize="@dimen/text_size_edit_text"
                android:hint="@string/edit_email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_email_black"
                android:drawablePadding="10dp"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:autofillHints="" tools:targetApi="o"/>

        <EditText
                android:id="@+id/signin_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="@dimen/text_size_edit_text"
                android:hint="@string/edit_password"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_lock_black"
                android:drawablePadding="10dp"
                android:ems="10"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/email_user"
                app:layout_constraintStart_toStartOf="@+id/email_user"
                app:layout_constraintEnd_toEndOf="@+id/email_user"
                android:autofillHints="" tools:targetApi="o"/>

        <Button
                android:id="@+id/login_btn"
                android:text="@string/accedi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:textSize="@dimen/text_size_edit_text"
                android:theme="@style/ButtonGreenCity"
                app:layout_constraintStart_toStartOf="@+id/signin_password"
                app:layout_constraintEnd_toEndOf="@+id/signin_password"
                app:layout_constraintTop_toBottomOf="@+id/signin_password"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/sign_in"
                android:text="@string/clicca_qui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/login_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_light" app:layout_constraintHorizontal_bias="0.498"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wrapper_progress_circular_signin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/trasparent_grey"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
                android:id="@+id/progress_circular_signin"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>